--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
 
 	<body onload="refresh()">
 		<div>
-			<div style="text-align: right;">
+			<!--登录  注册 相关-->
+			<!--<div style="text-align: right;">
 				<a class="dropbtn" href="#" onclick="showLogin()">登录</a>
 				<a class="dropbtn" href="#" onclick="showRegister()">注册</a>&emsp;&emsp;
-			</div>
+			</div>-->
 			<div class="pic" id="mid">
 				<div id="sweep_" align="center" style="margin-bottom: 30px;">
 					<a onclick="refresh()" style="margin-left: 0px;">AGAIN?&emsp;XXXD</a>
@@ -282,12 +283,13 @@
 					<a href="blog/blog_home.jsp" style="margin-left: 0px;">ARTICLE</a>
 					<a href="blog/blog_home.jsp">PICTURE</a>
 					<a href="blog/blog_home.jsp">NOTPOEM</a>
-					<a href="blog/blog_home.jsp">MADEBYU</a>
+					<a href="blog/blog_home.jsp">呈现:</a>
 				</div>
 			</div>
 		</div>
 
-		<div id="rg_fl" class="_float">
+		<!--登录注册相关-->
+		<!--<div id="rg_fl" class="_float">
 			<table style="width: 100%;height: 100%;">
 				<tr>
 					<td style="vertical-align: middle;text-align: center;">
@@ -314,8 +316,8 @@
 					</td>
 				</tr>
 			</table>
-		</div>
-		<div id="lg_fl" class="_float">
+		</div>-->
+		<!--<div id="lg_fl" class="_float">
 			<table style="width: 100%;height: 100%;">
 				<tr>
 					<td style="vertical-align: middle;text-align: center;">
@@ -337,7 +339,7 @@
 					</td>
 				</tr>
 			</table>
-		</div>
+		</div>-->
 	</body>
 
 </html>
