--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
 					</tbody>
 				</table>
 				<div id="nav_menu" align="center">
-					<a href="blog/blog_home.jsp" style="margin-left: 0px;">ARTICLE</a>
-					<a href="blog/blog_home.jsp">PICTURE</a>
-					<a href="blog/blog_home.jsp">NOTPOEM</a>
-					<a href="blog/blog_home.jsp">呈现:</a>
+					<a href="blog/blog_home.html" style="margin-left: 0px;">ARTICLE</a>
+					<a href="blog/blog_home.html">PICTURE</a>
+					<a href="blog/blog_home.html">NOTPOEM</a>
+					<a href="blog/blog_home.html">呈现:</a>
 				</div>
 			</div>
 		</div>
