--- a/blog_home.html
+++ b/blog_home.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
+
+<style type="text/css">
+	#menu {
+		float: left;
+		width: 20%;
+		height: 1350;
+	}
+	
+	#content {
+		float: left;
+		width: 80%;
+		height: 1350;
+	}
+	
+	menu,
+	comment {
+		display: inline-block;
+	}
+</style>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>JSP Page</title>
-    </head>
-    <body>
- 	</body>
+
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<title>Article</title>
+	</head>
+
+	<body>
+		<div >
+			<div id="menu">
+				<div align="center"> sdas </div>
+			</div>
+			<div id="content"></div>
+		</div>
+	</body>
+
 </html>
