--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 				<div id="nav_menu" align="center">
 					<a href="blog_home.html" style="margin-left: 0px;">ARTICLE</a>
 					<a href="blog_home.html">PICTURE</a>
-					<a href="blog_home.html">NOTPOEM</a>
+					<a href="poem_home.html">NOTPOEM</a>
 					<a href="blog_home.html">呈现:</a>
 				</div>
 			</div>
