--- a/poem_home.html
+++ b/poem_home.html
@@ -66,11 +66,11 @@
 
 	<body onload="refresh()">
 		<div id="tab" class="tab">
-			<a style="font-size: 38px;line-height: 38px;vertical-align: 19px;">
-				>>> </a>
-			<input id="home_btn" type="image" src="favicon.ico" onclick="window.location.href='index.html';" />
-			<a style="font-size: 38px;line-height: 38px;vertical-align: 19px;">
-				<<< </a>
+			<!--<a style="font-size: 38px;line-height: 38px;vertical-align: 19px;">
+				>>> </a>-->
+			<input id="home_btn" type="image" href="#" src="favicon.ico" onclick="window.location.href='index.html';" />
+			<!--<a style="font-size: 38px;line-height: 38px;vertical-align: 19px;">
+				<<< </a>-->
 		</div>
 		<div id="b_area">
 			<ul>
