--- a/poem_home.html
+++ b/poem_home.html
@@ -24,7 +24,7 @@
 	
 	ul {
 		padding-left: 10px;
-		width: 20%;
+		width: 30%;
 	}
 	
 	li {
@@ -73,11 +73,15 @@
 				<<< </a>-->
 		</div>
 		<div id="b_area">
-			<ul>
+			<ul id="title_list">
 				<li>
 					<a class="poem_title" href="#" onclick="updateContent()">路过一间出租屋</a>
 				</li>
 			</ul>
+
+			<div id="content" style="width: 70%; height: 100%;">
+
+			</div>
 		</div>
 	</body>
 
