--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			</div>-->
 			<div class="pic" id="mid">
 				<div id="sweep_" align="center" style="margin-bottom: 30px;">
-					<a onclick="refresh()" style="margin-left: 0px;">AGAIN?&emsp;XXXD</a>
+					<a href="#" onclick="refresh()" style="margin-left: 0px;">AGAIN?&emsp;XXXD</a>
 				</div>
 				<table oncontextmenu="doNothing()" id="mytab" cellspacing="2" style="width: 530px;height: 270px;border: 0px;table-layout:fixed;margin-bottom: 20px;">
 					<tbody>
