--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 					<a href="blog_home.html">PICTURE</a>
 					<a href="poem_home.html">NOTPOEM</a>
 					<a href="blog_home.html">呈现:</a>
+					<a href="#">FRIENDS</a>
 				</div>
 			</div>
 		</div>
