--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			</div>-->
 			<div class="pic" id="mid">
 				<div id="sweep_" align="center" style="margin-bottom: 30px;">
-					<a href="#" onclick="refresh()" style="margin-left: 0px;">AGAIN?&emsp;XXXD</a>
+					<a href="#" onclick="refresh()" style="margin-left: 0px;">AGAIN (F5)?&emsp;XXXD</a>
 				</div>
 				<table oncontextmenu="doNothing()" id="mytab" cellspacing="2" style="width: 530px;height: 270px;border: 0px;table-layout:fixed;margin-bottom: 20px;">
 					<tbody>
@@ -280,10 +280,10 @@
 					</tbody>
 				</table>
 				<div id="nav_menu" align="center">
-					<a href="blog_home.html" style="margin-left: 0px;">ARTICLE</a>
-					<a href="blog_home.html">PICTURE</a>
+					<a href="#" style="margin-left: 0px;">ARTICLE</a>
+					<a href="#">PICTURE</a>
 					<a href="poem_home.html">NOTPOEM</a>
-					<a href="blog_home.html">呈现:</a>
+					<a href="#">呈现:</a>
 					<a href="#">FRIENDS</a>
 				</div>
 			</div>
