--- a/poem_home.html
+++ b/poem_home.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <style type="text/css">
+	body {
+		overflow: scroll;
+		overflow-x: hidden;
+	}
+	
 	.tab {
 		display: inline-block;
 		height: 48px;
@@ -16,6 +21,7 @@
 	#b_area {
 		width: 100%;
 		padding-top: 40px;
+		/*height: 400px;*/
 		display: inline-block;
 	}
 	
@@ -24,10 +30,14 @@
 		list-style: none;
 	}
 	
+	ul {
+		margin: 0px;
+	}
+	
 	li {
 		background: #FFFFFF;
 		width: 100%;
-		height: 65px;
+		height: 35px;
 		line-height: 40px;
 		vertical-align: middle;
 		font-size: 24px;
@@ -43,6 +53,7 @@
 	.poem_title {
 		text-decoration: none;
 		margin-right: 0px;
+		padding: 0px;
 	}
 	
 	.poem_title:link {
@@ -51,6 +62,24 @@
 	
 	.poem_title:visited {
 		color: #555555;
+	}
+	
+	div::-webkit-scrollbar-track {
+		background-color: #FFFFFF;
+		-webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 1);
+	}
+	
+	div::-webkit-scrollbar {
+		/*定义滚动条高宽及背景*/
+		width: 0px;
+		background-color: rgba(0, 0, 0, 1);
+	}
+	
+	div::-webkit-scrollbar-thumb {
+		/*定义滚动条*/
+		background-color: #8b8b8b;
+		/*background-color: #FFFFFF;*/
+		border-radius: 0px;
 	}
 </style>
 
@@ -72,14 +101,14 @@
 				<<< </a>-->
 		</div>
 		<div id="b_area">
-			<div style="float: left;width:40%;margin-right:0px;padding-right: 0px;">
+			<div style="float: left;width:40%;height:100%;overflow:auto;margin-right:0px;padding-right: 0px;">
 				<ul id="title_list">
 
 				</ul>
 			</div>
 			<!--<div style="width: 15%; height: 100px; float: left;"></div>-->
-			<div style="width: 60%; color:#666666;height: 100%; float: right;">
-				<p id="content" style=" padding-left:24%;font: '微软雅黑';font-size: 20px;line-height:28px;text-align: left;"></p>
+			<div style="width: 60%; color:#666666;height: 100%; float: right;overflow: auto;">
+				<p id="content" style=" padding-left:33%;font: '微软雅黑';font-size: 18px;line-height:35px;text-align: left;overflow-y: auto;margin:0px;"></p>
 			</div>
 		</div>
 	</body>
