--- a/poem_home.html
+++ b/poem_home.html
@@ -37,8 +37,8 @@
 	li {
 		background: #FFFFFF;
 		width: 100%;
-		height: 35px;
-		line-height: 40px;
+		height: 55px;
+		line-height: 35px;
 		vertical-align: middle;
 		font-size: 24px;
 		text-align: right;
@@ -57,11 +57,11 @@
 	}
 	
 	.poem_title:link {
-		color: #555555;
+		color: #333333;
 	}
 	
 	.poem_title:visited {
-		color: #555555;
+		color: #333333;
 	}
 	
 	div::-webkit-scrollbar-track {
@@ -108,7 +108,7 @@
 			</div>
 			<!--<div style="width: 15%; height: 100px; float: left;"></div>-->
 			<div style="width: 60%; color:#666666;height: 100%; float: right;overflow: auto;">
-				<p id="content" style=" padding-left:33%;font: '微软雅黑';font-size: 18px;line-height:35px;text-align: left;overflow-y: auto;margin:0px;"></p>
+				<p id="content" style=" padding-left:33%;font-size: 18px;line-height:35px;text-align: left;overflow-y: auto;margin:0px;"></p>
 			</div>
 		</div>
 	</body>
