--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
 					</tbody>
 				</table>
 				<div id="nav_menu" align="center">
-					<a href="#" style="margin-left: 0px;">NOTHING</a>
-					<a href="#">PICTURE</a>
-					<a href="poem_home.html">NOTPOEM</a>
+					<a href="nothing.html" style="margin-left: 0px;">NOTHING</a>
+					<!--<a href="#">PICTURE</a>-->
+					<a href="poem.html">NOTPOEM</a>
 					<a href="#">呈现:</a>
 					<a href="#" onclick="showFriends()">FRIENDS</a>
 				</div>
