--- a/nothing/imagery_rel_show.html
+++ b/nothing/imagery_rel_show.html
@@ -128,7 +128,7 @@
 	</head>
 
 	<body onload="loadRels()">
-		<p id="tips" style="width: 100%;text-align: center;font-size: 18px;padding-top: 45px;">请输入一个『意象』 e.g. 大海 乌鸦</p>
+		<p id="tips" style="width: 100%;text-align: center;font-size: 18px;padding-top: 45px;">请输入一个『意象』 e.g. 上帝 乌鸦</p>
 		<div style="text-align: center;">
 			<form>
 				<input id="imagery_input" style="width: 130px;" onfocus="this.value=''" onkeypress="if(event.keyCode==13) {_showRel.click();return false;}" onafterupdate="value=value.replace(/[^\u4E00-\u9FA5]/g,'')" onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\u4E00-\u9FA5]/g,''))" />
