--- a/index.html
+++ b/index.html
@@ -292,13 +292,14 @@
 					<a href="nothing.html" style="margin-left: 0px;">NOTHING</a>
 					<!--<a href="#">PICTURE</a>-->
 					<a href="poem.html">NOTPOEM</a>
-					<a href="#">呈现:</a>
+					<a href="呈现的综述.html" target="_blank">呈现:</a>
 					<a href="#" onclick="showFriends()">FRIENDS</a>
 				</div>
 				<br /> <br />
 				<div id="float_link" align="center" style="visibility: hidden;">
 					<a style="color: #555555;margin-left: 0px;">>>>></a>
 					<a href="https://gothamninja.github.io/gotham.github.io/" target="_blank">Gotham</a>
+					<a href="me.html" target="_blank">另一个我</a>
 				</div>
 			</div>
 		</div>
