--- a/呈现的综述.html
+++ b/呈现的综述.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 	<head>
@@ -461,7 +461,7 @@ A：诗人坐着沐浴。
 </code></pre>
 
 		<p>&emsp;&emsp;就是有一种寒冷生硬的感觉围绕在身旁，我不能具体的描述，就简单的称他们为『物』。人物、事物、友物、亲物、恋物、动物、植物，彼彼。</p>
-		<p>&emsp;&emsp;理想社会就是不同的人是颗不同的核，首要的是需要去除共识的强包容性。同时最大的阻碍是如何才能取消金钱在自由的表达中所占据的主导地位。自由是具备元自由的。起来吧，自由为了自由的自由而自由!</p>
+		<p>&emsp;&emsp;理想社会就是不同的人是颗不同的核，首要的是需要去除共识的强包容性。同时最大的阻碍是如何才能取消金钱在自由的表达中所占据的主导地位。自由是具备元自由的。自由为了自由的自由而自由!</p>
 		<p>&emsp;&emsp;世界总是同构的，或者说，自然让人们产生的思维，能够拥有并且发现自然本身的这种巧妙性质。动听的音乐，可口的食物，优美的数学公式，以及坐在汽车软垫上的舒适程度，是感觉。感觉，作为输出，成为了描述这种同构性的公共载体。</p>
 		<p>&emsp;&emsp;差异性是平等的前提条件，而不是起因。</p>
 		<h3>七、元之元</h3>
