--- a/nothing/imagery_rel_show.html
+++ b/nothing/imagery_rel_show.html
@@ -123,9 +123,13 @@
 		<meta charset="UTF-8">
 		<title>意象关联图谱</title>
 		<link rel="shortcut icon" href="../favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="../css/content_frame.css" />
 	</head>
 
 	<body onload="loadRels()">
+		<div id="tab" class="tab">
+			<input id="home_btn" type="image" href="#" src="../favicon.ico" onclick="window.location.href='../nothing.html';" />
+		</div>
 		<p id="tips" style="width: 100%;text-align: center;font-size: 18px;padding-top: 45px;"></p>
 		<div style="text-align: center;">
 			<form>
@@ -139,6 +143,5 @@
 		</div>
 
 	</body>
-	
 
 </html>
