--- a/nothing/naodong.html
+++ b/nothing/naodong.html
@@ -152,11 +152,11 @@
 		</div>
 		<p id="tips" style="width: 100%;text-align: center;font-size: 18px;padding-top: 0px;">用扳手代替手术刀，迅速砸出你的脑洞</p>
 		<div style="width: 100%; padding-top: 10px; height: 400px; display: inline-block; ">
-			<div style="float: left;width:18%;height:100%;overflow:auto;padding-right:25px; padding-top: 20px;">
+			<div style="float: left;width:25%;height:100%;overflow:auto;padding-right:0px; padding-top: 20px;">
 				<ul id="naodong_list">
 				</ul>
 			</div>
-			<div id="article_content" style="padding-left:5px;padding-right:55px;width: 74%; color:#666666;height: 100%; float: right;overflow: auto; ">
+			<div id="article_content" style="padding-left:3%;padding-right:7%;width: 65%; color:#666666;height: 100%; float: right;overflow: auto; ">
 			</div>
 		</div>
 	</body>
