--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
 				<div id="float_link" align="center" style="visibility: hidden;">
 					<a style="color: #555555;margin-left: 0px;">>>>></a>
 					<a href="https://gothamninja.github.io/gotham.github.io/" target="_blank">Gotham</a>
+					<a href="http://zeng9t.com/" target="_blank">zeng9t</a>
 					<a href="me.html" target="_blank">另一个我</a>
 				</div>
 			</div>
